--- a/style/style.css
+++ b/style/style.css
@@ -1,12 +1,12 @@
 nav > ul > li{
     display: inline;
-    margin-right: 20px;
+    margin-right:  20px;
+    
 }
 nav li > a{
-    text-decoration: none;
-
+     text-decoration: none;
 }
 footer{
-    text-align: center;
-    margin: 30px;
+        text-align:center;
+         margin-top: 30px;
 }
